[gd_scene load_steps=7 format=3 uid="uid://bs1fcv1n38gbb"]

[ext_resource type="Script" path="res://scripts/Flask.gd" id="1_c004a"]
[ext_resource type="Texture2D" uid="uid://cr0m4kxq4bjl7" path="res://images/flask-holder.png" id="2_rptam"]
[ext_resource type="Texture2D" uid="uid://cteiy16ws1x7h" path="res://images/empty-flask.png" id="3_nltrm"]
[ext_resource type="Texture2D" uid="uid://n1fqp35dx60k" path="res://images/fluid-flask.png" id="4_jko7m"]

[sub_resource type="Animation" id="Animation_wtorj"]
resource_name = "rotate_flask_on_hover"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("EmptyFlask:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, -0.74351]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("EmptyFlask:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(15, 16), Vector2(13, 16)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_xo1p4"]
_data = {
"rotate_flask_on_hover": SubResource("Animation_wtorj")
}

[node name="Flask" type="Button"]
self_modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(32, 32)
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -32.0
offset_right = 32.0
grow_vertical = 0
theme_type_variation = &"FlatButton"
script = ExtResource("1_c004a")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_left = -5.0
offset_top = -4.0
offset_right = 35.0
offset_bottom = 36.0
texture = ExtResource("2_rptam")

[node name="EmptyFlask" type="Sprite2D" parent="."]
position = Vector2(15, 16)
texture = ExtResource("3_nltrm")

[node name="FlasksAnimationPlayer" type="AnimationPlayer" parent="EmptyFlask"]
root_node = NodePath("../..")
libraries = {
"": SubResource("AnimationLibrary_xo1p4")
}

[node name="Fluid" type="TextureRect" parent="."]
layout_mode = 0
offset_left = -1.0
offset_right = 31.0
offset_bottom = 32.0
texture = ExtResource("4_jko7m")

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
